--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #CDCDCD;
   margin: 0;
   padding: 0;
 }
@@ -11,15 +11,15 @@ body {
 }
 
 h1 {
-  color: #333333;
+  color: #23238E;
 }
 
 p {
-  color: #666666;
+  color: #4D4DFF;
 }
 
 .contador {
   font-size: 36px;
-  color: #e74c3c;
+  color: #CC0000;
   margin-top: 20px;
 }
